--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,7 @@ YOUKU_CONCURRENCY=8
 # 默认值：360,vod,renren,hanjutv（不包含 tencent, youku, iqiyi, imgo 和 bilibili）
 # 如需使用腾讯源、优酷源、爱奇艺源、芒果源或B站源，请手动添加：SOURCE_ORDER=360,vod,tencent,youku,iqiyi,imgo,bilibili,renren,hanjutv
 # 如需使用巴哈姆特源，请手动添加：SOURCE_ORDER=360,vod,renren,hanjutv,bahamut
+# 如需获取巴哈姆特源繁体弹幕，请为bahamut手动添加@tc：SOURCE_ORDER=360,vod,renren,hanjutv,bahamut@tc
 SOURCE_ORDER=360,vod,renren,hanjutv
 
 # ==================== 平台排序配置 ====================
@@ -145,10 +146,12 @@ STRICT_TITLE_MATCH=false
 
 # ==================== 代理配置 ====================
 
-# 代理地址（用于访问受限资源）
-# 默认值：空（不使用代理）
-# 格式：http://proxy-server:port 或 https://proxy-server:port
-# 说明：目前只对巴哈姆特生效，如果使用 Docker 部署并且访问不了 bahamut 源，请配置代理地址
+# 代理/反代地址（用于访问受限资源）
+# 默认值：空（不使用代理/反代）
+# 格式：
+#   - 设置为代理为 http://proxy-server:port 或 https://proxy-server:port 
+#   - 设置为反代为 RP@http://proxy-server:port 或 RP@https://proxy-server
+# 说明：目前只对巴哈姆特生效，如果使用 Docker 部署并且访问不了 bahamut 源，请配置代理/反代地址
 # PROXY_URL=
 
 # ==================== TMDB 配置 ====================
