--- a/.env.example
+++ b/.env.example
@@ -152,13 +152,15 @@ STRICT_TITLE_MATCH=false
 #   - 设置为代理为 http://proxy-server:port 或 https://proxy-server:port 
 #   - 设置为反代为 RP@http://proxy-server:port 或 RP@https://proxy-server
 # 说明：目前只对巴哈姆特生效，如果使用 Docker 部署并且访问不了 bahamut 源，请配置代理/反代地址
+#      反代教程参考：https://github.com/wan0ge/bahamut-api-proxy
 # PROXY_URL=
 
 # ==================== TMDB 配置 ====================
 
 # TMDB API Key（用于巴哈姆特源的译名转换）
 # 默认值：空（不使用 TMDB）
-# 说明：配置后当巴哈第一次搜索无结果时自动从 TMDB 获取日语原名搜索
+# 说明：配置后并行从 TMDB 获取日语原名搜索巴哈
+#       如果TMDB条目类型不是动画或制作地区不是jp则不会进行巴哈搜索
 #       可以解决巴哈译名不同导致的搜索无结果问题（例如：间谍过家家 vs 間諜家家酒）
 #       获取方法参考：https://www.ugnas.com/tutorial-detail/id-226.html
 # TMDB_API_KEY=
