--- a/.env.example
+++ b/.env.example
@@ -58,7 +58,6 @@ YOUKU_CONCURRENCY=8
 # 默认值：360,vod,renren,hanjutv（不包含 tencent, youku, iqiyi, imgo 和 bilibili）
 # 如需使用腾讯源、优酷源、爱奇艺源、芒果源或B站源，请手动添加：SOURCE_ORDER=360,vod,tencent,youku,iqiyi,imgo,bilibili,renren,hanjutv
 # 如需使用巴哈姆特源，请手动添加：SOURCE_ORDER=360,vod,renren,hanjutv,bahamut
-# 如需获取巴哈姆特源繁体弹幕，请为bahamut手动添加@tc：SOURCE_ORDER=360,vod,renren,hanjutv,bahamut@tc
 SOURCE_ORDER=360,vod,renren,hanjutv
 
 # ==================== 平台排序配置 ====================
@@ -105,6 +104,12 @@ CONVERT_TOP_BOTTOM_TO_SCROLL=false
 # 说明：启用后，所有非白色的弹幕颜色会被转换为纯白色（16777215）
 # 可选值：true, false
 CONVERT_COLOR_TO_WHITE=false
+
+# 是否将繁体弹幕转换为简体，目前只对巴哈姆特源生效
+# 默认值：true（转换）
+# 说明：禁用后，不进行巴哈弹幕繁转简
+# 可选值：true, false
+DANMU_SIMPLIFIED=true
 
 # ==================== 弹幕输出格式配置 ====================
 
