--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -198,7 +198,7 @@ STRICT_TITLE_MATCH: false
 #   - 设置为bilibili反代为 bilibili@http://proxy-server:port 或 bilibili@https://proxy-server
 # 说明：目前只对巴哈姆特、TMDB API、bilibili生效
 #      如果使用 Docker 部署并且访问不了 bahamut 源或 TMDB API ，请配置代理/反代地址
-#      如果请启用B站港澳台番剧的弹幕搜索与获取请配置代理/反代/解析服务器地址
+#      如果想启用B站港澳台番剧的弹幕搜索与获取请配置代理/反代/解析服务器地址
 #      反代教程参考：https://github.com/wan0ge/bahamut-api-proxy
 # PROXY_URL: ""
 
