原来env没错，撤回一个更改（

--- a/config/.env.example
+++ b/config/.env.example
@@ -85,7 +85,7 @@ SOURCE_ORDER=360,vod,renren,hanjutv
 # PLATFORM_ORDER=
 
 # ==================== 源合并配置 ====================
-# 数据源合并配置（可选值：tencent, youku, iqiyi, imgo, bilibili, sohu, renren, hanjutv, bahamut, dandan, animeko）
+# 数据源合并配置（可选值：tencent, youku, iqiyi, imgo, bilibili, renren, hanjutv, bahamut, dandan, sohu, animeko）
 # 默认值：空
 # 说明：配置后将对应源合并同时一起获取弹幕返回，允许多组、允许一个源同时存在、一组配置一对
 # 格式：源字段&源字段
